creating a base docker image for kazoo dev

--- a/kazoo/images/kazoo-build-erl19/Dockerfile
+++ b/kazoo/images/kazoo-build-erl19/Dockerfile
@@ -1,4 +1,4 @@
-FROM erlang:19.3.6.8
+FROM erlang:19
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV APT_LISTCHANGES_FRONTEND=none
@@ -6,7 +6,8 @@ ENV APT_LISTCHANGES_FRONTEND=none
 RUN apt-get update -y
 RUN apt-get install -y \
 	vim emacs-nox wget curl ca-certificates sed git-core tcpdump zip unzip \
-	net-tools python tmux silversearcher-ag ntpdate colordiff bash-completion
+	net-tools python tmux silversearcher-ag ntpdate colordiff bash-completion \
+	ctags
 
 RUN apt-get install -qq -y \
 	build-essential expat htmldoc libexpat1-dev libssl-dev libncurses5-dev libxslt-dev zlib1g-dev strace
