fix mount and network issue in just-kazoo

--- a/kazoo/images/kz-dev-base/Dockerfile
+++ b/kazoo/images/kz-dev-base/Dockerfile
@@ -1,5 +1,5 @@
 ARG ERL_VERSION=latest
-FROM erlang:21
+FROM erlang:${ERL_VERSION}
 ARG ERL_VERSION
 
 RUN echo "$ERL_VERSION" > /otp_version
@@ -10,7 +10,7 @@ ENV APT_LISTCHANGES_FRONTEND=none
 RUN apt-get update -y
 RUN apt-get install -y \
     ## editors and shell
-    vim emacs-nox ctags bash-completion tmux silversearcher-ag colordiff \
+    neovim vim emacs-nox ctags bash-completion tmux silversearcher-ag colordiff \
     ## useful tools
     sed strace tcpdump net-tools ntpdate python \
     ## Kazoo dependecies
@@ -30,14 +30,18 @@ ENV FZF_URL https://github.com/junegunn/fzf-bin/releases/download/${FZF_VER:-0.1
 RUN curl https://codeload.github.com/icehess/dotfiles/zip/docker > /tmp/docker.zip \
     && ( cd /tmp && unzip docker.zip ) \
     && rm -rf /etc/skel && mv /tmp/dotfiles-docker /etc/skel \
+    ## skel dotfiles
     && git clone --depth 1 https://github.com/junegunn/fzf.git /etc/skel/.fzf \
     && ( cd /etc/skel/.fzf/bin && curl -fL ${FZF_URL} | tar xzf - ) \
     && HOME=/etc/skel vim +PlugInstall +qall --cmd 'set rtp^=/etc/skel/.vim' \
     && cp /etc/skel/.dotfiles-site/files/vim/plugins/kazoo_erlc.vim /etc/skel/.vim/bundle/ale/ale_linters/erlang/ \
+    ## root dotfiles
+    && rm -rf /root && cp -R /etc/skel /root \
+    ## cleanup
     && rm -rf /tmp/*
 
 COPY entrypoint.sh /entrypoint.sh
 
-EXPOSE ["11500", "8000", "5555"]
+EXPOSE 11500 8000 5555
 
 ENTRYPOINT ["/entrypoint.sh"]
