--- a/kazoo/stacks/just-kazoo/docker-stack.yml
+++ b/kazoo/stacks/just-kazoo/docker-stack.yml
@@ -29,17 +29,18 @@ services:
 
   couchdb:
     image: couchdb:latest
-    hostname: 'couchdb-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
+    hostname: 'couchdb.{{.Task.Slot}}'
     environment:
-      NODENAME: 'couchdb-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
+      NODENAME: 'couchdb.{{.Task.Slot}}'
     ports:
       - target: 9100
-        mode: host
-      - target: 5984
-        mode: host
+      # - target: 5984
       - target: 5986
     deploy:
       mode: replicated
+    # configs:
+      # - source: couchdb_cluster.ini
+      #   target:
     volumes:
       - type: bind
         source: ./couchdb_cluster.ini
@@ -52,47 +53,49 @@ services:
     networks:
       - kazoo
 
-  rabbitmq:
-    image: rabbitmq:3-management
-    hostname: 'rabbitmq-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
-    ports:
-      - target: 15672
-        mode: host
-    networks:
-      - kazoo
+  # rabbitmq:
+  #   image: rabbitmq:3-management
+  #   hostname: 'rabbitmq.{{.Task.Slot}}'
+  #   ports:
+  #     - target: 15672 # management UI
+  #       mode: host
+  #     - target: 5672 # AMQP port
+  #       mode: host
+  #   networks:
+  #     - kazoo
 
-  kazoo_apps:
-    image: ${KZ_DEV_BASE_IMAGE:-kz-dev-base:20}
-    environment:
-       << : *kz-env
-       KAZOO_NODE: kazoo_apps
-       NODE_NAME: kazoo+apps
-       REL: kazoo_apps
-    volumes: *kz-dev
-    ports:
-      - target: 11500
-        mode: host
-      - target: 8000
-        mode: host
-      - target: 5555
-        mode: host
-      - target: 8001 # GraphQL
-        mode: host
-    hostname: 'kazoo-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
-    tty: true
-    command: ["bash"]
-    networks:
-      - kazoo
+  # kazoo_apps:
+  #   image: ${KZ_DEV_BASE_IMAGE:-kz-dev-base:20}
+  #   hostname: 'kazoo_apps.{{.Task.Slot}}'
+  #   environment:
+  #      << : *kz-env
+  #      KAZOO_NODE: kazoo_apps
+  #      NODE_NAME: kazoo_apps
+  #      REL: kazoo_apps
+  #   volumes: *kz-dev
+  #   ports:
+  #     - target: 11500
+  #       mode: host
+  #     - target: 8000
+  #       mode: host
+  #     - target: 5555
+  #       mode: host
+  #     - target: 8001 # GraphQL
+  #       mode: host
+  #   tty: true
+  #   command: ["bash"]
+  #   networks:
+  #     - kazoo
 
   # kazoo_ecallmgr:
   #   image: ${KZ_DEV_BASE_IMAGE:-kz-dev-base}
+  #   hostname: 'kazoo_ecallmgr.{{.Task.Slot}}'
   #   environment:
   #      << : *kz-env
   #      KAZOO_NODE: ecallmgr
   #      NODE_NAME: ecallmgr
   #      REL: ecallmgr
   #      KAZOO_APPS: "ecallmgr"
-  #   hostname: 'callmgr-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
   #   volumes: *kz-dev
   #   ports:
   #     - target: 11500
@@ -102,15 +105,40 @@ services:
   #   networks:
   #     - kazoo
 
-  mailcatcher:
-    hostname: 'mailcatcher-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
-    image: 'schickling/mailcatcher'
+  monster-ui:
+    image: ${MONSTER_IMG:-node:8.11.3-stretch}
+    hostname: 'monster-ui.{{.Task.Slot}}'
+    environment:
+       TERM: screen-256color
+       LC_CTYPE: en_US.UTF-8
+       LANG: en_US.UTF-8
+    volumes:
+      - type: bind
+        source: ./monster-entrypoint.sh
+        target: /monster-entrypoint.sh
+      - type: bind
+        source: ${MONSTER_PATH:-/home/hesaam/work/2600hz/kazoo/monster-ui}
+        target: "/opt/monster-ui"
+      - type: bind
+        source: ${SU_EXEC_BIN:-/home/hesaam/work/2600hz/kazoo/su-exec/su-exec}
+        target: "/su-exec"
     ports:
-      - target: 1080
+      - target: 3000
         mode: host
-      - "1025"
+    tty: true
+    entrypoint: /monster-entrypoint.sh
+    command: ["/opt/monster-ui/node_modules/gulp/bin/gulp.js"]
     networks:
       - kazoo
+
+  # mailcatcher:
+  #   image: 'schickling/mailcatcher'
+  #   ports:
+  #     - target: 1080
+  #       mode: host
+  #     - "1025"
+  #   networks:
+  #     - kazoo
 
 networks:
   kazoo:
