--- a/kazoo/stacks/just-kazoo/config.ini
+++ b/kazoo/stacks/just-kazoo/config.ini
@@ -1,12 +1,3 @@
-; config.ini sample
-; section are between [] = [section]
-; key = value
-; to comment add ";" in front of the line
-
-
-; EXAMPLE
-
-
 [amqp]
 uri = "amqp://guest:guest@rabbitmq:5672"
 pool_size=250
@@ -30,3 +21,5 @@ keepalive=true
 
 [log]
 console=info
+file=debug
+
