--- a/kazoo/images/freeswitch/apkbuild/APKBUILD
+++ b/kazoo/images/freeswitch/apkbuild/APKBUILD
@@ -13,7 +13,7 @@ license="GPL"
 
 _fs_hash=${FS_HASH:-f3841b119925b5b82acca67cfa9bd3b47a19270d402ab9b4c1754117bc1ac331dc6d2e8ec386f3b3ed1b95ef9c6c4c6d7b438476dd378ab9b5384bbb4a42625f}
 
-_fs_source_filename=${FS_SOURCE_FILENAME:-${pkgname}-${pkgname}.tar.xz}
+_fs_source_filename=${FS_SOURCE_FILENAME:-${pkgname}-${pkgver}.tar.xz}
 _fs_source_url="${FS_SOURCE_URL:-https://files.freeswitch.org/releases/freeswitch/${_fs_source_filename}}"
 
 builddir="$srcdir/$pkgname-$pkgver"
@@ -82,12 +82,9 @@ source="${_fs_source_url}
     0001-mod_spandsp-max-tones.patch
     0001-sofia-sip-byte-order.patch
     0001-switch-console-crash.patch
-    0001-switch-core-media.patch
+    0001-switch-core-io.patch
     0002-FS-verto-bswap_64.patch
     0002-sofia-glue-gateway-crash.patch
-    001-rtmp-libressl.patch
-    001-srtp-libressl.patch
-    001-ssl-libressl.patch
     001-switch-buffer.patch
     freeswitch.confd
     freeswitch.initd
@@ -102,8 +99,6 @@ prepare() {
 
 build() {
     cd "$builddir"
-
-    ./bootstrap.sh
 
     cp -f "$srcdir/modules.conf" modules.conf
 
@@ -138,7 +133,7 @@ package(){
     cd "$builddir"
     make -j1 DESTDIR="$pkgdir" install samples-conf samples-htdocs
 
-    install -m755 -D "$srcdir"/$pkgname.initd $pkgdir"/etc/init.d/$pkgname
+    install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
     install -m644 -D "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
     chown -R $FREESWITCH_USER:$FREESWITCH_GROUP "$pkgdir"/var/*/freeswitch
 
@@ -227,7 +222,6 @@ db61d9a253105f7a1ef5f5c218b367a833f62a2e85e364e3971acc79f68037b0270c5b2f3e090964
 2a81bb2ba0a76b1e5b622d7b95827ad47cb318d111ea136e8fd245c2f6a86949d220a96bc33dbe7539b04e73c68ec512b88c6ee5d561094f77d0902980210408  0001-mod_spandsp-max-tones.patch
 8a7ca31cc80524b02edc83af891a32af64dd7834ac14b1389112f2ce7fe06fe602d24509a299898f25e807dd0b88544aecb990bf4bd37ee1c7023ae58dacd28a  0001-sofia-sip-byte-order.patch
 89dd3a6b01290d7d71af4b32ba1cc2003e3a73fb2df1f7153a15d0a57e9d0fa316b017f7cc979980b39306da8b34e0dc494f8a392ba4b4194280a7a3d9230f8c  0001-switch-console-crash.patch
-876d6746024658b13bc514e16878395f3fc8336dc846c2d74218f195593b3caab6697aceb74af72d2e41facaef7afaa336ff2597b0124b4d596507b1d5b5d33c  0001-switch-core-media.patch
 5f93150e1acd632df98bc3bed5613fb1e45180ae4096dcfee5c060da213c8355339260eaf5758cd77c785f6d84cf0661650a872ec574b586ab19803d4f6955f8  0002-FS-verto-bswap_64.patch
 1217a756d9c94fff9d01426d7057c7f2aa2be63fd5965d97feca79bbde7d786b0a23be0d5a3ab957bc1b27154a72fa3ff024bf57091ef267a553c193c625cec3  0002-sofia-glue-gateway-crash.patch
 f043341ce03a16f0c39631b66666b210283c08f462cb03db327d10de38c285985ef5f8505ccad941946b030100ad80c8595d0d216975a5029a31dc68f9dee9d3  001-rtmp-libressl.patch
