use my own kamailio, fressswitch images

--- a/kazoo/images/kazoo-fs/Dockerfile
+++ b/kazoo/images/kazoo-fs/Dockerfile
@@ -1,6 +1,8 @@
-FROM 2600hz/freeswitch:alpine-edge
+FROM icehess/freeswitch:latest
+
 ARG CFG_BRANCH=master
 ENV CFG_BRANCH=${CFG_BRANCH}
+
 RUN rm -rf /etc/freeswitch \
     && mkdir /etc/freeswitch \
     && cd /etc/freeswitch \
@@ -9,6 +11,3 @@ RUN rm -rf /etc/freeswitch \
 
 ADD docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
-RUN [ -n "$SIP_CAPTURE" ] \
-    && sed -i '/auto-restart/a <param name="capture-server" value="udp:kazoo:9060;hep=3;capture_id=100"/>' /etc/freeswitch/autoload_configs/sofia.conf.xml \
-    && sed -i '/sip-trace/a <param name="sip-capture" value="yes"/>' /etc/freeswitch/sip_profiles/sipinterface_1.xml
