--- a/kazoo/images/kazoo-km/Dockerfile
+++ b/kazoo/images/kazoo-km/Dockerfile
@@ -1,14 +1,12 @@
-FROM 2600hz/kamailio:alpine-edge
+FROM icehess/kamailio:5.1.6
 ARG CFG_BRANCH=master
 ENV CFG_BRANCH=${CFG_BRANCH}
-ENV DB_ENGINE=db_kazoo
-ENV DB_KAZOO_LOCATION=${DB_KAZOO_LOCATION:-/etc/kamailio/db}
 RUN rm -rf /etc/kamailio \
     && mkdir /etc/kamailio \
     && cd /etc/kamailio \
     && curl $(echo "https://codeload.github.com/2600hz/kazoo-configs-kamailio/tar.gz/${CFG_BRANCH}") | \
        tar -xz --strip-components=2 $(echo "kazoo-configs-kamailio-${CFG_BRANCH}/kamailio") \
-    && mkdir -p ${DB_KAZOO_LOCATION}  \
+    && mkdir -p /etc/kamailio/db  \
     && ./db_scripts/create-kazoodb-sql.sh
 
 ADD docker-entrypoint.sh /
