--- a/kazoo/stacks/kazoo-dev/config.ini
+++ b/kazoo/stacks/kazoo-dev/config.ini
@@ -1,12 +1,3 @@
-; config.ini sample
-; section are between [] = [section]
-; key = value
-; to comment add ";" in front of the line
-
-
-; EXAMPLE
-
-
 [amqp]
 uri = "amqp://guest:guest@rabbitmq:5672"
 pool_size=250
@@ -29,4 +20,6 @@ connect_options=bigcouch_options
 keepalive=true
 
 [log]
-console=info
+console=error
+file=debug
+
