--- a/kazoo/stacks/kazoo-dev/docker-stack.yml
+++ b/kazoo/stacks/kazoo-dev/docker-stack.yml
@@ -1,13 +1,14 @@
-version: '3.5'
+version: '3.7'
 
 x-node-env:
   &kz-env
+    TERM: screen-256color
     KAZOO_COOKIE: change_me
     LC_CTYPE: en_US.UTF-8
     LANG: en_US.UTF-8
     CODE_LOADING_MODE: interactive
     RELX_REPLACE_OS_VARS: "true"
-    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/kazoo/app/_rel/kazoo/bin"
+    PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/kazoo/_rel/kazoo/bin"
 
 x-devnode-cfg:
   &kz-dev
@@ -16,117 +17,272 @@ x-devnode-cfg:
       target: /opt/kazoo
       read_only: false
     - type: bind
-      source: ./config.ini
-      target: /etc/kazoo/config.ini
+      source: ${KAZOO_SOUNDS_PATH:-/home/hesaam/work/2600hz/kazoo/sounds/kazoo-core}
+      target: /opt/sounds
       read_only: true
     - type: bind
-      source: ${KAZOO_SOUNDS_PATH:-../media-files/kazoo-core}
-      target: /media-files
+      source: /home/hesaam/work/2600hz/kazoo/docker/scripts
+      target: /opt/scripts
       read_only: true
+    - type: bind
+      source: /home/hesaam/work/2600hz/kazoo/monster-ui
+      target: /opt/monster-ui
+      read_only: true
+
+volumes:
+  couchdb_data:
+    name: '{{.Service.Name}}-{{.Task.Slot}}-data'
+
+configs:
+  kazoo_config_ini:
+    file: /home/hesaam/work/2600hz/kazoo/docker/kazoo/stacks/just-kz/config.ini
+  couchdb_cluster_ini:
+    file: /home/hesaam/work/2600hz/kazoo/docker/kazoo/stacks/just-kz/couchdb_cluster.ini
 
 services:
 
   couchdb:
     image: couchdb:latest
-    hostname: 'couchdb-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
+    hostname: 'couchdb.{{.Task.Slot}}'
     environment:
-      NODENAME: 'couchdb-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
+      NODENAME: 'couchdb.{{.Task.Slot}}'
     ports:
       - target: 9100
       - target: 5984
+        mode: host
       - target: 5986
+        mode: host
     deploy:
       mode: replicated
     volumes:
       - type: bind
-        source: ./couchdb_cluster.ini
-        target: /opt/couchdb/etc/local.d/cluster.ini
-      - type: bind
-        source: "./data/"
+        source: ${COUDB_CONFIG_PATH:-/home/hesaam/work/2600hz/kazoo/docker/kazoo/stacks/just-kz/couchdb_cluster.ini}
+        target: /opt/couchdb/etc/local.d/20-cluster.ini
+      - type: volume
+        source: 'couchdb_data'
         target: "/opt/couchdb/data"
-      # - type: ${COUCHDB_VOL_TYPE:-tmpfs}
-      #   target: ${COUCHDB_VOL_TARGET:-/opt/couchdb/data}
     networks:
-      - kazoo
+      kazoo:
+        aliases:
+          - 'couchdb.{{.Task.Slot}}'
 
   rabbitmq:
     image: rabbitmq:3-management
-    hostname: 'rabbitmq-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
+    hostname: 'rabbitmq.{{.Task.Slot}}'
     ports:
-      - target: 15672
+      - target: 15672 # management UI
         mode: host
-    deploy:
-      endpoint_mode: dnsrr
+      - target: 5672 # AMQP port
+        mode: host
     networks:
-      - kazoo
+      kazoo:
+        aliases:
+          - 'rabbitmq.{{.Task.Slot}}'
 
-  freeswitch:
-    image: 2600hz/kazoo-freeswitch:alpine-edge
-    hostname: 'freeswitch-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
-    volumes:
-      - type: bind
-        source: ../media-files/freeswitch
-        target: /usr/share/freeswitch/sounds
-        read_only: true
-    deploy:
-      endpoint_mode: dnsrr
-    networks:
-      - kazoo
-
-  kapps:
-    image: ${KZ_DEV_BASE_IMAGE:-kazoo-build}
+  kazoo_apps:
+    image: ${KZ_DEV_BASE_IMAGE:-kz-dev-base:19}
+    hostname: 'kazoo_apps.{{.Task.Slot}}'
     environment:
        << : *kz-env
-       KAZOO_NODE: apps
-       NODE_NAME: apps
-       REL: apps
-       KAZOO_APPS: ${KAZOO_APPS:-"blackhole,callflow,cdr,conference,crossbar,fax,hangups,media_mgr,milliwatt,omnipresence,pivot,registrar,reorder,stepswitch,sysconf,tasks,teletype,trunkstore,webhooks"}
+       KAZOO_NODE: kazoo_apps
+       NODE_NAME: kazoo_apps
+       REL: kazoo_apps
     volumes: *kz-dev
+    configs:
+      - source: kazoo_config_ini
+        target: /etc/kazoo/config.ini
     ports:
-      - "11500"
-      - "8000"
-      - "5555"
-    hostname: 'kazoo-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
+      - target: 11500 # Erlang
+        mode: host
+      - target: 8000 # Crossbar
+        mode: host
+      - target: 5555 # Websocket
+        mode: host
+      - target: 25 # Fax SMTP
+        mode: host
+      - target: 8001 # GraphQL
+        mode: host
     tty: true
     command: ["bash"]
     networks:
-      - kazoo
+      kazoo:
+        aliases:
+          - 'kazoo_apps.{{.Task.Slot}}'
 
-  callmgr:
-    image: ${KZ_DEV_BASE_IMAGE:-kazoo-build}
+  kazoo_ecallmgr:
+    image: ${KZ_DEV_BASE_IMAGE:-kz-dev-base:19}
+    hostname: 'kazoo_ecallmgr.{{.Task.Slot}}'
     environment:
        << : *kz-env
        KAZOO_NODE: ecallmgr
        NODE_NAME: ecallmgr
        REL: ecallmgr
        KAZOO_APPS: "ecallmgr"
-    hostname: 'callmgr-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
     volumes: *kz-dev
+    configs:
+      - source: kazoo_config_ini
+        target: /etc/kazoo/config.ini
     ports:
-      - "11500"
+      - target: 11500
+        mode: host
     command: ["bash"]
     tty: true
     networks:
-      - kazoo
+      kazoo:
+        aliases:
+          - 'kazoo_ecallmgr.{{.Task.Slot}}'
+
+  freeswitch:
+    image: icehess/kz-dev-fs:latest
+    hostname: 'freeswitch.{{.Task.Slot}}'
+    environment:
+       KZ_TRACE: "true"
+       FU_DOCKER_START: "16384"
+       FU_DOCKER_END: "16392"
+    ports: # range 16384-32768/udp
+      - published: 16384
+        target: 16384
+        protocol: udp
+        mode: host
+      - published: 16385
+        target: 16385
+        protocol: udp
+        mode: host
+      - published: 16386
+        target: 16386
+        protocol: udp
+        mode: host
+      - published: 16387
+        target: 16387
+        protocol: udp
+        mode: host
+      - published: 16388
+        target: 16388
+        protocol: udp
+        mode: host
+      - published: 16389
+        target: 16389
+        protocol: udp
+        mode: host
+      - published: 16390
+        target: 16390
+        protocol: udp
+        mode: host
+      - published: 16391
+        target: 16391
+        protocol: udp
+        mode: host
+      - published: 16392
+        target: 16392
+        protocol: udp
+        mode: host
+    networks:
+      # kazoo_public: {}
+      kazoo:
+        aliases:
+          - 'freeswitch.{{.Task.Slot}}'
 
   kamailio:
-    image: 2600hz/kazoo-kamailio:alpine-edge
-    hostname: 'kamailio-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
+    image: icehess/kz-dev-km:latest
+    hostname: 'kamailio.{{.Task.Slot}}'
     environment:
        ENABLE_SERVICE_NAME: "false"
        ENABLE_ADVERTISE: "false"
-    networks:
-       - kazoo
-
-  mailcatcher:
-    hostname: 'mailcatcher-{{.Task.Slot}}.{{index .Service.Labels "com.docker.stack.namespace"}}'
-    image: 'schickling/mailcatcher'
+       KZ_TRACE: "true"
+       KZ_WEBSOCKET_ENABLED: "true"
+       PUSHER_ROLE: "true"
+       PRESENCE_NOTIFY_SYNC_ROLE: "true"
     ports:
-      - "1080"
-      - "1025"
+      - published: 5060 # SIP TCP
+        target: 5060
+        protocol: tcp
+        mode: host
+      - published: 5060 # SIP UDP
+        target: 5060
+        protocol: udp
+        mode: host
+      - published: 5061 # SSIP (SIP TLS)
+        target: 5061
+        protocol: tcp
+        mode: host
+      - published: 7000 # SIP ALG TCP
+        target: 7000
+        protocol: tcp
+        mode: host
+      - published: 7000 # SIP ALG UDP
+        target: 7000
+        protocol: udp
+        mode: host
+      - published: 7001 # SSIP ALG
+        target: 7001
+        protocol: tcp
+        mode: host
+      - published: 5064 # http/https/websocket
+        target: 5064
+        protocol: tcp
+        mode: host
+      - published: 5065 # http/https/websocket
+        target: 5065
+        protocol: tcp
+        mode: host
+    networks:
+      kazoo:
+        aliases:
+          - 'kamailio.{{.Task.Slot}}'
+
+  monster-ui:
+    image: ${MONSTER_IMG:-node:8.11.3-stretch}
+    hostname: 'monster-ui.{{.Task.Slot}}'
+    environment:
+       TERM: screen-256color
+       LC_CTYPE: en_US.UTF-8
+       LANG: en_US.UTF-8
+    volumes:
+      - type: bind
+        source: ./monster-entrypoint.sh
+        target: /monster-entrypoint.sh
+      - type: bind
+        source: ${MONSTER_PATH:-/home/hesaam/work/2600hz/kazoo/monster-ui}
+        target: "/opt/monster-ui"
+      - type: bind
+        source: ${SU_EXEC_BIN:-/home/hesaam/work/2600hz/kazoo/su-exec/su-exec}
+        target: "/su-exec"
+    ports:
+      - target: 3000
+        mode: host
+    tty: true
+    entrypoint: /monster-entrypoint.sh
+    command: ["/opt/monster-ui/node_modules/gulp/bin/gulp.js"]
+    networks:
+      kazoo:
+        aliases:
+          - 'monster-ui.{{.Task.Slot}}'
+
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    hostname: 'mailcatcher'
+    ports:
+      - target: 8025
+        mode: host
+      - target: 1025
+        mode: host
     networks:
       - kazoo
 
-    networks:
-    kazoo:
-       attachable: true
+  # mailcatcher:
+  #   image: 'schickling/mailcatcher'
+  #   ports:
+  #     - target: 1080
+  #       mode: host
+  #     - target: 1025
+  #       mode: host
+  #   networks:
+  #     - kazoo
+
+networks:
+  # kazoo_public:
+  #   external: true
+  #   name: host
+  kazoo:
+    attachable: true
+
